# Project-Management-Tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: backend-architecture.md  compliance.md
server/: .env  .env.example  README.md  create_tables.py  pyproject.toml
server/app/: __init__.py  config.py  extensions.py
server/app/models/: __init__.py  base.py  board.py  board_list.py  card.py  refresh_token.py  team.py  tenant.py  user.py
server/app/routes/: __init__.py  ai.py  auth.py  boards.py  health.py  teams.py  users.py
server/app/schemas/: __init__.py  auth.py  board.py  team.py  user.py
server/app/services/: ai.py  security.py
server/app/utils/: auth.py  responses.py
server/instance/: app.db  pmt.db
server/migrations/: README.md
server/project_management_tracker_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: test_app.py
src/: App.tsx  main.tsx
src/__tests__/: App.test.tsx
src/api/: client.ts  types.ts
src/components/: AIAssistant.tsx  Board.tsx  Card.tsx  Dashboard.tsx  List.tsx  Modal.tsx  ProtectedRoute.tsx  TeamManagement.tsx  WorkspaceLayout.tsx
src/context/: AuthContext.tsx  auth-context.ts  auth-utils.ts  useAuth.ts
src/hooks/: useLocalStorage.ts  useWorkspace.ts  useWorkspaceContext.ts
src/pages/: BoardPage.tsx  DashboardPage.tsx  Login.tsx  Register.tsx  TeamsPage.tsx
src/styles/: index.css
src/types/: index.ts
